--- a/index.html
+++ b/index.html
@@ -2,59 +2,93 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <!-- Link your CSS stylesheet -->
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
       <nav>
-       <a href="#">Plan your Visit</a>  
-       <a href="#">Learn about the Park </a> 
-       <a href="">Get Involved</a> 
+        <a href="#" class="orange">Plan your<br />Visit</a>
+        <a href="#" class="blue">Learn about<br />the Park </a>
+        <a href="#" class="yellow">Get<br />Involved</a>
       </nav>
-      <img src="assets/header_img.jpg" alt="Yosemite mountain range" />
-      <h1>Yosemite Park Guide</h1>
-      <p>
-        Come explore California’s beautiful wilderness.<br />
-        Always open. Reservations are not<br />available or required to enter
-        the<br />park.
-      </p>
     </header>
-    <section id="about">
-      <div>
-        <p>
-          Not just a great valley, but a shrine to human foresight, the strength
-          of granite, the<br />power of glaciers, the persistence of life, and
-          the tranquility of the High Sierra.<br />
+    <section class="cta">
+      <div class="image">
+        <img
+          src="assets/header_img.jpg"
+          alt="Yosemite mountains"
+          class="round"
+        />
+      </div>
+      <div class="text">
+        <div>
+          <h1>Yosemite Park Guide</h1>
+          <h2>Come explore California’s beautiful wilderness.</h2>
+          <p>
+            Always open. Reservations are not<br />available or required to
+            enter the<br />park.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="abttext">
+        <p>Not just a great valley, but a shrine to human foresight, the strength of granite, the<br />power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
 
-          First protected in 1864, Yosemite National Park is best known for its
-          waterfalls, but<br />within its nearly 1,200 square miles, you can
-          find deep valleys, grand meadows, ancient<br />giant sequoias, a vast
-          wilderness area, and much more.
-        </p>
+         <p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but<br />within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient<br />giant sequoias, a vast wilderness area, and much more.</p> 
+        
       </div>
       <div class="campfire">
         <img
           src="https://image.flaticon.com/icons/svg/2979/2979348.svg"
           alt="Campfire picture"
+          class="campfireimg"
         />
-          <p>Fire is a natural and essential<br />part of Yosemite. We manage fire<br />carefully and study how it<br />interacts with the park’s<br />ecosystems. This blog provides<br />updates about fires in Yosemite.<br />Check for current fire<br />restrictions.</p> 
+        <p>
+          Fire is a natural and essential<br />part of Yosemite. We manage
+          fire<br />carefully and study how it<br />interacts with the park’s<br />ecosystems.
+          This blog provides<br />updates about fires in Yosemite.<br />Check
+          for <span class="bold">current fire<br />restrictions.</span>
+        </p>
       </div>
       <div class="reservations">
-       <img src="https://image.flaticon.com/icons/svg/820/820374.svg"  alt="RV picture"> 
-          <p>We strongly recommend that you make<br />reservations for lodging, camping,<br />and backpacking. You can pay the<br />park entrance fee upon arrival<br />(there's no need to pay it in<br />advance).</p>  
+        <img
+          src="https://image.flaticon.com/icons/svg/820/820374.svg"
+          alt="RV picture"
+          class="rvimg"
+        />
+        <p>
+          We strongly recommend that you make<br />reservations for lodging,
+          camping,<br />and backpacking. You can pay the<br />
+          <span class="bold">park entrance fee</span> upon arrival<br />(there's
+          no need to pay it in<br />advance).
+        </p>
       </div>
     </section>
     <footer>
-     <img src="assets/footer_img.jpg" alt="Yosemite landscape picture"> 
+      <img
+        src="assets/footer_img.jpg"
+        alt="Yosemite landscape picture"
+        class="footimg"
+      />
       <nav>
-        <a href="#">Plan your Visit</a>  
-        <a href="#">Learn about the Park </a> 
-        <a href="">Get Involved</a> 
-       </nav>
+        <a href="#" class="orange">Plan your<br />Visit</a>
+        <a href="#" class="blue">Learn about<br />the Park </a>
+        <a href="" class="yellow">Get<br />Involved</a>
+      </nav>
     </footer>
   </body>
 </html>
